--- a/assets/templates/home/index_modal_subscription.ejs
+++ b/assets/templates/home/index_modal_subscription.ejs
@@ -4,11 +4,18 @@
 <div class="modal-content">
 <div class="modal-header">
 	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-	<h4 class="modal-title" id="modalSubscriptionLabel"><img src="/images/logoDualconseils.png" width="15%"> Souscription en ligne PERP163.fr</h4>
+	<h4 class="modal-title" id="modalSubscriptionLabel"><img src="/images/logoDualconseils.png" width="15%"> Souscription en ligne au PERP163.fr</h4>
 </div>
 <div class="modal-body">
 
-		La première étape de la soucription en ligne au PERP 163 est la création de votre compte PERP163.fr.
+La souscription en ligne est en cours de construction.
+<br /><br />
+Afin de souscrire au <a href="http://perp163.fr">PERP163.fr</a>, vous pouvez nous contacter par email à l'adresse suivante: <a href="mailto:perp163@dualconseils.com">perp163@dualconseils.com</a>
+<br /><br />
+Nous vous remercions de la confiance que vous nous apportez. A bientôt sur <a href="http://perp163.fr">PERP163.fr</a> !
+<br /><br />
+L'équipe <a href="http://perp163.fr">PERP163.fr</a>
+<!-- 		La première étape de la soucription en ligne au PERP 163 est la création de votre compte PERP163.fr.
 		<br /><br />
 		Si vous possédez déjà un compte, vous pouvez vous connecter directement en première page du site pour compléter votre souscription.
 
@@ -37,10 +44,11 @@
 		<div class="form-group">
 			<div class="col-md-12 text-right">
 				<input type="submit" class="btn btn-info" value="Envoyer la demande">
+				<input type="hidden" name="accountCreationOrigin" value="subscription" />
 				<input type="hidden" name="_csrf" value="<%= _csrf %>" />
 			</div>
 		</div>
-	</form>
+	</form> -->
 </div>
  <div class="modal-footer">
 	<button type="button" class="btn btn-default" data-dismiss="modal">Fermer</button>
