--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -131,8 +131,8 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            <li><a class="navbar-brand" href="/"><%= __("FAQ") %></a></li>
-            <li><a class="navbar-brand" href="/"><%= __("Blog") %></a></li>
+            <li><a class="navbar-brand" target="_blank" href="http://dual-conseils.com/perp/perp163-fr-faq/"><%= __("FAQ") %></a></li>
+            <li><a class="navbar-brand" target="_blank" href="http://dual-conseils.com/perp/perp163-fr-blog/"><%= __("Blog") %></a></li>
             <li><a class="navbar-brand" href="/"><%= __("Contact us") %></a></li>
             <% if (session.authenticated && session.User.admin) { %>
               <li><a href="/user"><%= __('Administration') %></a></li>
@@ -229,7 +229,7 @@
       <hr>
       <footer class="footer pull-right">
         <div>
-          <div>Perp163.fr via <a href="http://www.dualconseils.com" target="_blank">Dual Conseils</a></div>
+          <div><a href="http://perp163.fr">PERP163.fr</a> via <a href="http://www.dualconseils.com" target="_blank">Dual Conseils</a></div>
         </div>
       </footer>
     </div>
