--- a/assets/templates/home/index_modal_askForSimulation.ejs
+++ b/assets/templates/home/index_modal_askForSimulation.ejs
@@ -50,7 +50,7 @@
 		<div class="form-group">
 			<label for="expectedRetirementAge" class="col-md-5 control-label">Âge prévisionnel de départ a la retraite</label>
 			<div class="col-md-7">
-				<input placeholder="67 ans par défaut" name="expectedRetirementAge" type="text" class="form-control"/>
+				<input placeholder="67 ans par défaut" name="expectedRetirementAge" id="expectedRetirementAge" type="text" class="form-control"/>
 			</div>
 		</div>
 		<div class="form-group">
